criação da função para mostrar os itens da lista e criação da função para marcar os itens como concluídos

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             </button>
         </div>
     </selection>
+    <selection class="list"></selection>
     <div class="warning">
         <div>
             <i class="ph ph-warning-circle ph-fill"></i>
