--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
     </section>
 
     <selection class="list"></selection>
+
      <div class="warning hide-warning">
         <div>
             <i class="ph ph-warning-circle ph-fill"></i>
             <span>O item foi removido da lista</span>
         </div>
-        <button>
+         <button onclick="addHideWarningClass()"></button>
             <i class="ph ph-x"></i>
         </button>
     </div>
